Documents/MetaDataIO/MetadataIO-distr-33.0.3-bin/repos/src/objects/InsuranceCoverageTypes__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>CovDescription__c</fullName>
        <label>CovDescription</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EachPerson__c</fullName>
        <label>EachPerson</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>InsuranceCoverageTypes</label>
</CustomObject>